docs(coverage): update code coverage and test result

--- a/reports/debug/org.flyve.inventory.agent.utils/FlyveLog.java.html
+++ b/reports/debug/org.flyve.inventory.agent.utils/FlyveLog.java.html
@@ -78,10 +78,10 @@ public class FlyveLog {
      * @param string the message to log
      */
     public static void e(String message) {
-<span class="pc bpc" id="L78" title="1 of 2 branches missed.">        if(message != null) {</span>
-<span class="fc" id="L79">            Log.e(TAG, message);</span>
+<span class="nc bnc" id="L78" title="All 2 branches missed.">        if(message != null) {</span>
+<span class="nc" id="L79">            Log.e(TAG, message);</span>
         }
-<span class="fc" id="L81">    }</span>
+<span class="nc" id="L81">    }</span>
 
     /**
      * Sends a WARN log message
