--- a/reports/debug/org.flyve.inventory.agent.utils/Helpers.java.html
+++ b/reports/debug/org.flyve.inventory.agent.utils/Helpers.java.html
@@ -84,8 +84,8 @@ public class Helpers {
 <span class="nc" id="L81">    }</span>
 
     public static String splitCamelCase(String s) {
-<span class="fc" id="L84">        return capitalize(s.replaceAll(</span>
-<span class="fc" id="L85">                String.format(&quot;%s|%s|%s&quot;,</span>
+<span class="nc" id="L84">        return capitalize(s.replaceAll(</span>
+<span class="nc" id="L85">                String.format(&quot;%s|%s|%s&quot;,</span>
                         &quot;(?&lt;=[A-Z])(?=[A-Z][a-z])&quot;,
                         &quot;(?&lt;=[^A-Z])(?=[A-Z])&quot;,
                         &quot;(?&lt;=[A-Za-z])(?=[^A-Za-z])&quot;
@@ -142,9 +142,9 @@ public class Helpers {
 <span class="nc" id="L139">    }</span>
 
     public static String capitalize(String str) {
-<span class="fc" id="L142">        StringBuilder sb = new StringBuilder(str.toLowerCase());</span>
-<span class="fc" id="L143">        sb.setCharAt(0, Character.toUpperCase(sb.charAt(0)));</span>
-<span class="fc" id="L144">        return sb.toString();</span>
+<span class="nc" id="L142">        StringBuilder sb = new StringBuilder(str.toLowerCase());</span>
+<span class="nc" id="L143">        sb.setCharAt(0, Character.toUpperCase(sb.charAt(0)));</span>
+<span class="nc" id="L144">        return sb.toString();</span>
     }
 
 }
